banner page done

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="inter-font">
     <header>
         <nav>
-            <h1><span class="white">Tech</span><span class="">Wave</span></h1>
+            <h1 class="white">Tech<span class="">Wave</span></h1>
             <ul>
                 <li><a href="">About</a></li>
                 <li><a href="">Episodes</a></li>
@@ -23,6 +23,28 @@
                 <img src="/assets/ArrowRight.png" alt="Arrow image">
             </button>
         </nav>
+        <!-- Nav section end -->
+        <section id="hero-section">
+            <section class="hero-container">
+                <div class="img-container">
+                        <img class="lower-img" src="/assets/hero-circle.png" alt="circle image">
+                        <img class="upper-img" src="/assets/microphone.png" alt="microphone image">
+                </div>
+                <h1>TechWave</h1>
+                <p>Your daily dose of tech insights, productivity hacks, and personal growth</p>
+                <div class="btn-container ">
+                    <button class="btn-primary gradient-box" id="spotify-btn">
+                        <img src="/assets/spotify.png" alt="">
+                        <span>Listen on Spotify</span>
+                    </button>
+                    <button class="btn-primary" id="message-btn">
+                        <img src="assets/message.png" alt="">
+                        <p>Subscribe</p>
+                    </button>
+                </div>
+
+            </section>
+        </section>
     </header>
 </body>
 </html>
