hero section modified

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style/color.css">
+    <link rel="stylesheet" href="./style/color.css">
 </head>
 <body class="inter-font">
     <header>
@@ -20,15 +20,15 @@
             </ul>
             <button class="btn-primary gradient-box">
                 <p>Subscribe</p>
-                <img src="/assets/ArrowRight.png" alt="Arrow image">
+                <img src="./assets/ArrowRight.png" alt="Arrow image">
             </button>
         </nav>
         <!-- Nav section end -->
         <section id="hero-section">
             <section class="hero-container">
                 <div class="img-container">
-                        <img class="lower-img" src="/assets/hero-circle.png" alt="circle image">
-                        <img class="upper-img" src="/assets/microphone.png" alt="microphone image">
+                        <img class="lower-img" src="./assets/hero-circle.png" alt="circle image">
+                        <img class="upper-img" src="./assets/microphone.png" alt="microphone image">
                 </div>
                 <h1>TechWave</h1>
                 <p>Your daily dose of tech insights, productivity hacks, and personal growth</p>
