images are modified for live link

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
                 <p>Your daily dose of tech insights, productivity hacks, and personal growth</p>
                 <div class="btn-container ">
                     <button class="btn-primary gradient-box" id="spotify-btn">
-                        <img src="/assets/spotify.png" alt="">
+                        <img src="./assets/spotify.png" alt="">
                         <span>Listen on Spotify</span>
                     </button>
                     <button class="btn-primary" id="message-btn">
-                        <img src="assets/message.png" alt="">
+                        <img src="./assets/message.png" alt="">
                         <p>Subscribe</p>
                     </button>
                 </div>
