till video section done

--- a/index.html
+++ b/index.html
@@ -117,7 +117,15 @@
             <h1 class="white heading-primary" style="margin-bottom: 40px;">Featured Episodes</h1>
             <div class="videos-container">
                 <div class="video-container">
-                    <iframe width="380" height="214" src="https://www.youtube.com/embed/CRraHg4Ks_g?si=YcIsuUv__4gFOpKv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                   <iframe 
+                        width="380" 
+                        height="214" 
+                        src="https://www.youtube.com/embed/CRraHg4Ks_g" 
+                        title="YouTube video player" 
+                        frameborder="0" 
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                        allowfullscreen>
+                    </iframe>
                     <div class="desc-container">
                         <h3 class="white">The Future of AI in Everyday Life</h3>
                         <p class="white">Exploring how artificial intelligence is transforming our daily routines and what to expect in the next decade.</p>
