--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="./style/color.css">
 </head>
 <body class="inter-font">
-    <header style="display: none;">
+    <header >
         <nav class="nav-bar">
-            <h1 class="white">Tech<span class="">Wave</span></h1>
+            <h1 class="white">Tech<span class="gradient">Wave</span></h1>
             <ul class="hidden-class">
                 <li><a href="">About</a></li>
                 <li><a href="">Episodes</a></li>
@@ -56,26 +56,27 @@
                 We break down complex topics into digestible insights, explore productivity strategies that actually work, <br>
                 and share stories of personal growth from industry leaders. <br><br><br>
 
-                Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
+                Join thousands of young professionals and tech enthusiasts who start their day with TechWave.
+            </p>
             
-             <div class="stat-container">
-            <div class="stat-1">
-                <h1 class="green">150K+</h1>
-                <p>Monthly Listeners</p>
+            <div class="stat-container">
+                <div class="stat-1">
+                    <h1 class="green">150K+</h1>
+                    <p>Monthly Listeners</p>
+                </div>
+                <div class="stat-2">
+                    <h1 class="green">200+</h1>
+                    <p>Episodes Published</p>
+                </div>
+                <div class="stat-3">
+                    <h1 class="green">4.9★</h1>
+                    <p>Average Rating</p>
+                </div>
+                <div class="stat-4">
+                    <h1 class="green">50+</h1>
+                    <p>Industry Experts</p>
+                </div>
             </div>
-            <div class="stat-2">
-                <h1 class="green">200+</h1>
-                <p>Episodes Published</p>
-            </div>
-            <div class="stat-3">
-                <h1 class="green">4.9★</h1>
-                <p>Average Rating</p>
-            </div>
-            <div class="stat-4">
-                <h1 class="green">50+</h1>
-                <p>Industry Experts</p>
-            </div>
-         </div>
          </section>
         <!-- about end -->
         <!-- choosing reasons page -->
@@ -160,6 +161,49 @@
             </div>
         </section>
         <!-- feature episodes end -->
+        <!-- host intro page start -->
+        <section class="host-intro-container">
+            <h1 class="heading-primary white">Meet the Host</h1>
+            <div class="host-container">
+                <img src="./assets/host.png" alt="host picture">
+                <div class="host-info-container">
+                    <h3 class="white">Alex Kumar</h3>
+                    <p class="white">Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.</p>
+                    <div class="social-container">
+                        <img src="./assets/linkedin.png" alt="">
+                        <img src="./assets/twitter.png" alt="">
+                        <img src="./assets/instagram.png" alt="">
+                        <img src="./assets/youtube.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- host intro page end -->
+        <!-- Footer page start -->
+        <footer>
+            <h1>Tech<span class="gradient">Wave</span></h1>
+            <div class="logos-container">
+                <div class="logo-container">
+                    <img src="./assets/spotify.png" alt="">
+                    <p>Spotify</p>
+                </div>
+                <div class="logo-container">
+                    <img src="./assets/apple-podcast.png" alt="">
+                    <p>Apple Podcasts</p>
+                </div>
+                <div class="logo-container">
+                    <img src="./assets/youtube-podcast.png" alt="">
+                    <p>YouTube</p>
+                </div>
+                <div class="logo-container">
+                    <img src="./assets/twitter.png" alt="">
+                    <p>Twitter</p>
+                </div>
+            </div>
+            <p>© 2026 TechWave Podcast. All rights reserved.</p>
+        </footer>
+        <!-- Footer page end -->
+
     </main>
 </body>
 </html>
