--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
             <img class="menu-hidden" src="./assets/hamburger-menu.png" alt="">
         </nav>
         <!-- Nav section end -->
-        <section id="hero-section" class="banner">
+        <!-- <section id="hero-section" class="banner"> -->
             <section class="hero-container">
                 <div class="img-container">
                         <img class="lower-img" src="./assets/hero-circle.png" alt="circle image">
                         <img class="upper-img" src="./assets/microphone.png" alt="microphone image">
+                        <img class="new-img" src="./assets/new-frame.png" alt="">
                 </div>
                 <h1>TechWave</h1>
                 <p>Your daily dose of tech insights, productivity hacks, and personal growth</p>
@@ -45,9 +46,8 @@
                 </div>
 
             </section>
-        </section>
+        <!-- </section> -->
     </header>
-
     <main>
         <!-- about the podcast start -->
          <section class="about">
@@ -181,26 +181,28 @@
         <!-- host intro page end -->
         <!-- Footer page start -->
         <footer>
-            <h1>Tech<span class="gradient">Wave</span></h1>
-            <div class="logos-container">
-                <div class="logo-container">
-                    <img src="./assets/spotify.png" alt="">
-                    <p>Spotify</p>
+            <div class="container">
+                <h1>Tech<span class="gradient">Wave</span></h1>
+                <div class="logos-container">
+                    <div class="logo-container">
+                        <img src="./assets/spotify.png" alt="">
+                        <p>Spotify</p>
+                    </div>
+                    <div class="logo-container">
+                        <img src="./assets/apple-podcast.png" alt="">
+                        <p>Apple Podcasts</p>
+                    </div>
+                    <div class="logo-container">
+                        <img src="./assets/youtube-podcast.png" alt="">
+                        <p>YouTube</p>
+                    </div>
+                    <div class="logo-container">
+                        <img src="./assets/twitter.png" alt="">
+                        <p>Twitter</p>
+                    </div>
                 </div>
-                <div class="logo-container">
-                    <img src="./assets/apple-podcast.png" alt="">
-                    <p>Apple Podcasts</p>
-                </div>
-                <div class="logo-container">
-                    <img src="./assets/youtube-podcast.png" alt="">
-                    <p>YouTube</p>
-                </div>
-                <div class="logo-container">
-                    <img src="./assets/twitter.png" alt="">
-                    <p>Twitter</p>
-                </div>
+                <p>© 2026 TechWave Podcast. All rights reserved.</p>
             </div>
-            <p>© 2026 TechWave Podcast. All rights reserved.</p>
         </footer>
         <!-- Footer page end -->
 
